--- a/FinalFractalSet.csproj
+++ b/FinalFractalSet.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<!-- Import tModLoader mod properties -->
 	<Import Project="..\tModLoader.targets" />
@@ -9,6 +9,9 @@
 	</PropertyGroup>
 	<ItemGroup>
 	  <PackageReference Include="Solaestas.tModLoader.ModBuilder" Version="1.6.1" />
+	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\LogSpiralLibrary\LogSpiralLibrary.csproj" />
 	</ItemGroup>
 
 	<!-- References -->
