--- a/FinalFractalSet.csproj
+++ b/FinalFractalSet.csproj
@@ -11,6 +11,12 @@
 	  <PackageReference Include="Solaestas.tModLoader.ModBuilder" Version="1.6.1" />
 	</ItemGroup>
 	<ItemGroup>
+		<AdditionalFiles Include="**/*.xml;**/*.xnb"
+						 Exclude="bin/**/*;obj/**/*"
+						 Pack="true"
+						 ModPath="%(Identity)"/>
+	</ItemGroup>
+	<ItemGroup>
 	  <ProjectReference Include="..\LogSpiralLibrary\LogSpiralLibrary.csproj" />
 	</ItemGroup>
 
